--- a/src/styles/ChartContainer.css
+++ b/src/styles/ChartContainer.css
@@ -7,7 +7,7 @@
 .container{
     display: flex;
     flex-direction: row;
-    padding: 50px 50px;
+    padding: 0px 0px 0 0px;
     flex-wrap: wrap;
     justify-content: center;
 }
