--- a/src/styles/InfosPerso.css
+++ b/src/styles/InfosPerso.css
@@ -4,6 +4,7 @@
     top: 0px;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 .form-container {
     display: flex;
@@ -12,8 +13,9 @@
     flex-wrap: wrap;
     justify-content: center;
    
-    width: 60%;
+    max-width: 60%;
     margin: 10px auto;
+    
     
 }
 
@@ -131,12 +133,34 @@ margin: 5px 5px;
 
 }
 .img-previewer img{
+    object-fit: cover;
     width: 100px;
+    height: 100px;
     margin: 0 10px;
     border-radius: 50px;
 }
 .star{
     color: #1c8ddf;
     display: inline-block;
+    
+}
+.ajout-avec-succes{
+    position: absolute;
+    top: 100px;
+    right: -100%;
+    
+    background-color: rgba(0, 128, 0, 0.835);
+    width: 300px;
+    text-align: center;
+    font-size: 18px;
+    color: white;
+    transition: 1s;
+    padding: 5px 10px;
+    border-radius: 5px;
+    
+}
+.ajout-show{
+    right: 0px;
+    
     
 }
