--- a/src/styles/GestionEleves.css
+++ b/src/styles/GestionEleves.css
@@ -5,6 +5,8 @@
     top: 0px;
     display: flex;
     flex-direction: column;
+    height: 100vh;
+    overflow: hidden;
 }
 .table-container{
 margin: 0 auto;
@@ -82,4 +84,24 @@ tr:nth-of-type(2n){
 }
 .add-student-btn .material-icons{
     font-size: 40px;
+}
+
+.supprime-avec-succes{
+    position: absolute;
+    top: 100px;
+    right: -100%;
+    
+    background-color: rgba(255, 166, 0, 0.974);
+    width: 300px;
+    text-align: center;
+    font-size: 18px;
+    color: white;
+    transition: 1s;
+    padding: 5px 10px;
+    border-radius: 5px;
+    box-shadow: 0 1px 6px 0 #20212447;
+    
+}
+.deleted-show{
+    right: -5px;
 }
