--- a/src/styles/EspaceAdmin.css
+++ b/src/styles/EspaceAdmin.css
@@ -22,3 +22,10 @@
     
     padding-left: 10px;
 }
+.espace-admin .table-container{
+    margin: 0 auto;
+    max-height: 500px;
+    max-width: 90%;
+    overflow-x: scroll;
+    overflow-y: scroll;
+}
